--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ MMOCore.iml
 *.tar.gz
 *.rar
 
+# 允许lib目录下的jar文件
+!lib/*.jar
+!lib/**/*.jar
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
