--- a/MMOCore-API/pom.xml
+++ b/MMOCore-API/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>MMOCore</artifactId>
         <groupId>net.Indyuce</groupId>
-        <version>1.13.1-SNAPSHOT</version>
+        <version>1.13.1-SNAPSHOT-Lythrilla</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
