--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,25 +12,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        java: [ '21' ]
-    
     steps:
       - uses: actions/checkout@v3
       
-      - name: 设置JDK ${{ matrix.java }}
+      - name: 设置JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: ${{ matrix.java }}
-          distribution: 'zulu'
+          java-version: '21'
+          distribution: 'zulu-jdk'
           cache: 'maven'
       
       - name: 构建项目
         run: mvn -B clean package
       
       - name: 上传构建产物
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: MMOCore-${{ github.sha }}
           path: target/MMOCore-*.jar
@@ -46,7 +42,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'zulu'
+          distribution: 'zulu-jdk'
           cache: 'maven'
       
       - name: 构建项目 (Windows)
@@ -60,7 +56,7 @@ jobs:
 
   # 发布版本
   release:
-    needs: [build, build-windows]
+    needs: [build]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     
@@ -68,7 +64,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: 下载构建产物
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
           name: MMOCore-${{ github.sha }}
           path: dist
