--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-name: Build MMOCore
+﻿name: Build MMOCore
 
 on:
   push:
     branches: [ main, master, dev ]
   pull_request:
     branches: [ main, master ]
-  # 允许手动触发工作流
   workflow_dispatch:
 
 jobs:
@@ -15,46 +14,23 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: 设置JDK 21
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'zulu-jdk'
           cache: 'maven'
       
-      - name: 构建项目
+      - name: Build with Maven
         run: mvn -B clean package
       
-      - name: 上传构建产物
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: MMOCore-${{ github.sha }}
           path: target/MMOCore-*.jar
           
-  # Windows构建
-  build-windows:
-    runs-on: windows-latest
-    
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: 设置JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'zulu-jdk'
-          cache: 'maven'
-      
-      - name: 构建项目 (Windows)
-        run: mvn -B clean package
-      
-      - name: 上传构建产物 (Windows)
-        uses: actions/upload-artifact@v3
-        with:
-          name: MMOCore-windows-${{ github.sha }}
-          path: target/MMOCore-*.jar
-
-  # 发布版本
+  # Release job
   release:
     needs: [build]
     if: startsWith(github.ref, 'refs/tags/')
@@ -63,17 +39,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: 下载构建产物
+      - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
           name: MMOCore-${{ github.sha }}
           path: dist
       
-      - name: 创建发布
+      - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           files: dist/MMOCore-*.jar
           name: MMOCore ${{ github.ref_name }}
           draft: false
           prerelease: false
-          generate_release_notes: true 
+          generate_release_notes: true
