--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'zulu-jdk'
+          distribution: 'zulu'
           cache: 'maven'
       
       - name: Build with Maven
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - name: Download artifacts
         uses: actions/download-artifact@v4.6.2
